--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,6 +37,11 @@ p {
     font-size: 16px;
 }
 
+.div-form {
+    height: 300px;
+
+}
+
 #login, #password {
     background-color: var(--bg-color-darkmode);
     border-radius: 10px;
